Resolves: tdf#110077 move the SvxBackgroundColorItem<->SvxBrushItem conversion

into the dialog itself

Reviewed-on: https://gerrit.libreoffice.org/41029
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit 6284804c2ccb3ad8bb6e1c1dac8d622f66b8c07d)

Reviewed-on: https://gerrit.libreoffice.org/41168
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Michael Stahl <mstahl@redhat.com>
(cherry picked from commit a407285747c65894bc858c4aa722a24e57caca31)

Change-Id: I83db9f02145a4927257dd5691f82dad1a11eaea6